// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createclass-callsite.js 1`] = `
/* @flow */
var React = require('react');
var Hello = require('./createclass-module');
import type {Node} from 'react';

var HelloLocal = React.createClass({
  propTypes: {
    name: React.PropTypes.string.isRequired,
  },

  render: function(): Node {
    return <div>{this.props.name}</div>;
  }
});

var Callsite = React.createClass({
  render: function(): Node {
    return (
      <div>
        <Hello />
        <HelloLocal />
      </div>
    );
  }
});

module.exports = Callsite;
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/* @flow */
var React = require("react");
var Hello = require("./createclass-module");
import type { Node } from "react";

var HelloLocal = React.createClass({
  propTypes: {
    name: React.PropTypes.string.isRequired
  },

  render: function(): Node {
    return (
      <div>
        {this.props.name}
      </div>
    );
  }
});

var Callsite = React.createClass({
  render: function(): Node {
    return (
      <div>
        <Hello />
        <HelloLocal />
      </div>
    );
  }
});

module.exports = Callsite;

`;

exports[`createclass-module.js 1`] = `
/* @flow */
var React = require('react');
import type {Node} from 'react';

var Hello = React.createClass({
  propTypes: {
    name: React.PropTypes.string.isRequired,
  },

  render: function(): Node {
    return <div>{this.props.name}</div>;
  }
});

module.exports = Hello;
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/* @flow */
var React = require("react");
import type { Node } from "react";

var Hello = React.createClass({
  propTypes: {
    name: React.PropTypes.string.isRequired
  },

  render: function(): Node {
    return (
      <div>
        {this.props.name}
      </div>
    );
  }
});

module.exports = Hello;

`;

exports[`es6class-proptypes-callsite.js 1`] = `
/* @flow */
import React from 'react';
import Hello from './es6class-proptypes-module';
import type {Node} from 'react';

class HelloLocal extends React.Component<void, {name: string}, void> {
  defaultProps = {};
  propTypes = {
    name: React.PropTypes.string.isRequired,
  };
  render(): Node {
    return <div>{this.props.name}</div>;
  }
}

class Callsite extends React.Component<void, {}, void> {
  render(): Node {
    return (
      <div>
        <Hello />
        <HelloLocal />
      </div>
    );
  }
}

module.exports = Callsite;
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/* @flow */
import React from "react";
import Hello from "./es6class-proptypes-module";
import type { Node } from "react";

class HelloLocal extends React.Component<void, { name: string }, void> {
  defaultProps = {};
  propTypes = {
    name: React.PropTypes.string.isRequired
  };
  render(): Node {
    return (
      <div>
        {this.props.name}
      </div>
    );
  }
}

class Callsite extends React.Component<void, {}, void> {
  render(): Node {
    return (
      <div>
        <Hello />
        <HelloLocal />
      </div>
    );
  }
}

module.exports = Callsite;

`;

exports[`es6class-proptypes-module.js 1`] = `
/* @flow */
import React from 'react';
import type {Node} from 'react';

class Hello extends React.Component<void, {name: string}, void> {
  defaultProps = {};
  propTypes = {
    name: React.PropTypes.string.isRequired,
  };

  render(): Node {
    return <div>{this.props.name}</div>;
  }
}

module.exports = Hello;
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/* @flow */
import React from "react";
import type { Node } from "react";

class Hello extends React.Component<void, { name: string }, void> {
  defaultProps = {};
  propTypes = {
    name: React.PropTypes.string.isRequired
  };

  render(): Node {
    return (
      <div>
        {this.props.name}
      </div>
    );
  }
}

module.exports = Hello;

`;

exports[`es6class-types-callsite.js 1`] = `
/* @flow */
import React from 'react';
import Hello from './es6class-types-module';
import type {Node} from 'react';

type Props = {name: string};

class HelloLocal extends React.Component<void, Props, void> {
  props: Props;

  render(): Node {
    return <div>{this.props.name}</div>;
  }
}

class Callsite extends React.Component<void, Props, void> {
  render(): Node {
    return (
      <div>
        <Hello />
        <HelloLocal />
      </div>
    );
  }
}

module.exports = Callsite;
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/* @flow */
import React from "react";
import Hello from "./es6class-types-module";
import type { Node } from "react";

type Props = { name: string };

class HelloLocal extends React.Component<void, Props, void> {
  props: Props;

  render(): Node {
    return (
      <div>
        {this.props.name}
      </div>
    );
  }
}

class Callsite extends React.Component<void, Props, void> {
  render(): Node {
    return (
      <div>
        <Hello />
        <HelloLocal />
      </div>
    );
  }
}

module.exports = Callsite;

`;

exports[`es6class-types-module.js 1`] = `
/* @flow */
import React from 'react';
import type {Node} from 'react';

type Props = {name: string};

class Hello extends React.Component<{}, Props, void>{
  props: Props;
  static defaultProps: {};

  render(): Node {
    return <div>{this.props.name}</div>;
  }
}

module.exports = Hello;
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/* @flow */
import React from "react";
import type { Node } from "react";

type Props = { name: string };

class Hello extends React.Component<{}, Props, void> {
  props: Props;
  static defaultProps: {};

  render(): Node {
    return (
      <div>
        {this.props.name}
      </div>
    );
  }
}

module.exports = Hello;

`;
